syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

service KeymanagerGrpcService {
  rpc cadastrar (KeymanagerGrpcRequest) returns (KeymanagerGrpcReply) {}
}

enum TipoDaChave {
  CPF = 0;
  TELEFONE_CELULAR = 1;
  EMAIL = 2;
  CHAVE_ALEATORIA = 3;
}

message KeymanagerGrpcRequest {
  string clientId = 1;
  TipoDaChave tipoDaChave = 2;
  string chave = 3;
}

message KeymanagerGrpcReply {
  string keyId = 1;
}